# Console-Based-Tetris-Game

./: CMakeLists.txt  CNAME  README.md  Tetris.sln
Debug/: Tetris.ilk
Tetris/: Source.cpp  Tetris.vcxproj  Tetris.vcxproj.filters  TetrisHeadline.txt  controls.txt  credits.txt  tetris.cpp  tetris.h
Tetris/Debug/: vc120.idb  vc140.idb
Tetris/Debug/Tetris.tlog/: CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/Release/Tetris.tlog/: CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
